# ChaosDroid

./: .env.example  .env.production  .gitignore  DEPLOY.md  DEPLOYMENT.md  Dockerfile  README.md  deploy.bat  deploy.sh  docker-compose.yml  init_diagnosis_db.py  pyproject.toml  run_server.py  start.bat  start_server.py  verify_deploy.py
app/: main.py
app/api/: main.py
app/cli/: __init__.py  device.py  init.py  pool.py  serve.py  worker.py
app/config/: __init__.py  settings.py
app/diagnosis/: __init__.py  config.py  enums.py  exceptions.py  main.py  schemas.py
app/executors/: __init__.py  base.py  mock_executor.py  real_executor.py
app/injectors/: __init__.py  base.py  cpu_io_stress.py  low_battery.py  monkey_stability.py  network_jitter.py  reboot_timeout.py  storage_pressure.py
app/models/: __init__.py  device_lease.py  event.py  event_queue.py  scenario.py
app/observers/: __init__.py  collector.py
app/orchestrators/: execution.py  state_machine.py
app/scheduling/: device_sync.py  enums.py  lease_manager.py  pool_manager.py  quarantine.py  scheduler.py
app/services/: artifact_service.py  event_dispatcher.py  execution_diagnose_service.py  execution_service.py  injector_dispatch_service.py  log_export_service.py  observation_service.py  profile_service.py  recovery_service.py  (+6 more)
chaosdroid/: __init__.py  main.py
deploy/: chaosdroid.service
docs/: PROJECT_REVIEW.md  TRACLENS_INTEGRATION.md  chaosdroid_project_plan.md  chaosdroid_technical_report.md  chaosdroid_tracelens_integration_review.md  项目快速入门指南.md
migrations/: 001_tracelens_integration.py
tests/: test_middleware.py  test_middleware_simple.py
(+187 files in other folders)
